--- a/party_guthaben_party.html
+++ b/party_guthaben_party.html
@@ -5,22 +5,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🍹 Party Guthaben Manager 🍺</title>
 <style>
-/* ===== Grundlayout ===== */
+/* ===== Hintergrund ===== */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 15px;
-  background: linear-gradient(135deg,#0b1f4a,#0f286e);
+  background: linear-gradient(160deg,#0b1f4a,#0f286e,#112f90);
   color: #fff;
   overflow-x: hidden;
 }
 
+/* ===== Überschriften ===== */
 h1, h2 {
   text-align: center;
   font-weight: bold;
   margin-bottom: 15px;
 }
 
+/* ===== Status ===== */
 #status {
   text-align: center;
   margin-bottom: 15px;
@@ -35,20 +37,20 @@ button {
   margin: 8px auto;
   padding: 16px;
   font-size: 18px;
-  border-radius: 10px;
+  border-radius: 12px;
   border: none;
   cursor: pointer;
   color: #fff;
   font-weight: bold;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.3);
-  transition: transform 0.1s;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+  transition: transform 0.1s, box-shadow 0.2s;
 }
-button:active { transform: scale(0.97); }
+button:active { transform: scale(0.97); box-shadow: 0 2px 6px rgba(0,0,0,0.4); }
 
 /* Farbverläufe für Buttons */
-.button-green { background: linear-gradient(45deg,#2ecc71,#27ae60);}
-.button-red   { background: linear-gradient(45deg,#e74c3c,#c0392b);}
-.button-orange{ background: linear-gradient(45deg,#f39c12,#d35400);}
+.button-green { background: linear-gradient(145deg,#2ecc71,#27ae60);}
+.button-red   { background: linear-gradient(145deg,#e74c3c,#c0392b);}
+.button-orange{ background: linear-gradient(145deg,#f39c12,#d35400);}
 
 /* ===== QR Reader ===== */
 #qr-reader { width: 90%; max-width: 320px; margin: 10px auto; }
@@ -63,6 +65,9 @@ textarea {
   margin-top: 10px;
   font-size: 16px;
   resize: none;
+  border-radius: 8px;
+  padding: 8px;
+  box-shadow: inset 0 2px 4px rgba(0,0,0,0.4);
 }
 
 #notiz-counter { font-size: 14px; margin-top: 4px; text-align: center; }
@@ -70,26 +75,38 @@ textarea {
 /* ===== Warenkorb ===== */
 #warenkorb {
   list-style: none;
-  padding: 0;
+  padding: 10px;
   margin: 10px auto;
   width: 90%;
   max-width: 320px;
   text-align: left;
+  background: rgba(255,255,255,0.05);
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 }
-#warenkorb li { margin-bottom: 8px; word-wrap: break-word; }
+#warenkorb li {
+  margin-bottom: 8px;
+  word-wrap: break-word;
+  padding: 6px;
+  border-radius: 6px;
+  background: rgba(255,255,255,0.05);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 #warenkorb li button {
   padding: 6px 10px;
   font-size: 16px;
   margin-left: 6px;
-  border-radius: 6px;
+  border-radius: 8px;
 }
 
 /* ===== Produkte ===== */
 #produkte { margin-top: 15px; }
-.produkt-titel { margin: 10px 0 5px 0; font-weight: bold; text-align: center; }
+.produkt-titel { margin: 10px 0 5px 0; font-weight: bold; text-align: center; font-size: 18px; }
 .preis-row { display: flex; justify-content: center; gap: 8px; margin-bottom: 6px; flex-wrap: wrap; }
-.preis-btn { flex: 1 1 calc(45%); min-width: 100px; padding: 14px; font-size: 18px; border-radius: 10px; border: none; cursor: pointer; color: #fff; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.3); transition: transform 0.1s; }
-.preis-btn:active { transform: scale(0.97); }
+.preis-btn { flex: 1 1 calc(45%); min-width: 100px; padding: 16px; font-size: 18px; border-radius: 12px; border: none; cursor: pointer; color: #fff; font-weight: bold; box-shadow: 0 4px 12px rgba(0,0,0,0.4); transition: transform 0.1s, box-shadow 0.2s; }
+.preis-btn:active { transform: scale(0.97); box-shadow: 0 2px 6px rgba(0,0,0,0.4); }
 </style>
 </head>
 <body>
