--- a/party_guthaben_party.html
+++ b/party_guthaben_party.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🍹 Party Guthaben Manager 🍺</title>
 <style>
+/* ===== Hintergrund ===== */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -13,73 +14,88 @@ body {
   color: #fff;
   overflow-x: hidden;
 }
-h1, h2 { text-align: center; font-weight: bold; margin-bottom: 15px; }
-#status { text-align: center; margin-bottom: 15px; font-weight: bold; }
-button {
-  display: block;
-  width: 90%;
-  max-width: 320px;
-  margin: 8px auto;
-  padding: 16px;
-  font-size: 18px;
-  border-radius: 12px;
-  border: none;
-  cursor: pointer;
-  color: #fff;
-  font-weight: bold;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+
+/* ===== Überschriften ===== */
+h1,h2{ text-align:center; font-weight:bold; margin-bottom:15px; }
+
+/* ===== Status ===== */
+#status{ text-align:center; margin-bottom:15px; font-weight:bold; }
+
+/* ===== Buttons ===== */
+button{
+  display:block;
+  width:90%;
+  max-width:320px;
+  margin:8px auto;
+  padding:16px;
+  font-size:18px;
+  border-radius:12px;
+  border:none;
+  cursor:pointer;
+  color:#fff;
+  font-weight:bold;
+  box-shadow:0 4px 12px rgba(0,0,0,0.4);
   transition: transform 0.1s, box-shadow 0.2s;
 }
-button:active { transform: scale(0.97); box-shadow: 0 2px 6px rgba(0,0,0,0.4); }
-.button-green { background: linear-gradient(145deg,#2ecc71,#27ae60);}
-.button-red   { background: linear-gradient(145deg,#e74c3c,#c0392b);}
+button:active{ transform: scale(0.97); box-shadow:0 2px 6px rgba(0,0,0,0.4); }
+
+.button-green{ background: linear-gradient(145deg,#2ecc71,#27ae60);}
+.button-red{ background: linear-gradient(145deg,#e74c3c,#c0392b);}
 .button-orange{ background: linear-gradient(145deg,#f39c12,#d35400);}
-#qr-reader { width: 90%; max-width: 320px; margin: 10px auto; }
-#gast { display: none; margin-top: 20px; text-align: center; }
-textarea {
-  width: 90%;
-  max-width: 320px;
-  height: 60px;
-  margin-top: 10px;
-  font-size: 16px;
-  resize: none;
-  border-radius: 8px;
-  padding: 8px;
+
+/* ===== QR Reader ===== */
+#qr-reader{ width:90%; max-width:320px; margin:10px auto; }
+
+/* ===== Gastbereich ===== */
+#gast{ display:none; margin-top:20px; text-align:center; }
+textarea{
+  width:90%;
+  max-width:320px;
+  height:60px;
+  margin-top:10px;
+  font-size:16px;
+  resize:none;
+  border-radius:8px;
+  padding:8px;
   box-shadow: inset 0 2px 4px rgba(0,0,0,0.4);
 }
-#notiz-counter { font-size: 14px; margin-top: 4px; text-align: center; }
-#warenkorb {
-  list-style: none;
-  padding: 10px;
-  margin: 10px auto;
-  width: 90%;
-  max-width: 320px;
-  text-align: left;
-  background: rgba(255,255,255,0.05);
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+#notiz-counter{ font-size:14px; margin-top:4px; text-align:center; }
+
+/* ===== Warenkorb ===== */
+#warenkorb{
+  list-style:none;
+  padding:10px;
+  margin:10px auto;
+  width:90%;
+  max-width:320px;
+  text-align:left;
+  background:rgba(255,255,255,0.05);
+  border-radius:10px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.3);
 }
-#warenkorb li {
-  margin-bottom: 8px;
-  word-wrap: break-word;
-  padding: 6px;
-  border-radius: 6px;
-  background: rgba(255,255,255,0.05);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+#warenkorb li{
+  margin-bottom:8px;
+  word-wrap:break-word;
+  padding:6px;
+  border-radius:6px;
+  background:rgba(255,255,255,0.05);
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 }
-#warenkorb li button {
-  padding: 6px 10px;
-  font-size: 16px;
-  margin-left: 6px;
-  border-radius: 8px;
+#warenkorb li button{
+  padding:6px 10px;
+  font-size:16px;
+  margin-left:6px;
+  border-radius:8px;
 }
-#produkte { margin-top: 15px; }
-.produkt-titel { margin: 10px 0 5px 0; font-weight: bold; text-align: center; font-size: 18px; }
-.preis-row { display: flex; justify-content: center; gap: 8px; margin-bottom: 6px; flex-wrap: wrap; }
-.preis-btn { flex: 1 1 calc(45%); min-width: 100px; padding: 16px; font-size: 18px; border-radius: 12px; border: none; cursor: pointer; color: #fff; font-weight: bold; box-shadow: 0 4px 12px rgba(0,0,0,0.4); transition: transform 0.1s, box-shadow 0.2s; }
-.preis-btn:active { transform: scale(0.97); box-shadow: 0 2px 6px rgba(0,0,0,0.4); }
+
+/* ===== Produkte ===== */
+#produkte{ margin-top:15px; }
+.produkt-titel{ margin:10px 0 5px 0; font-weight:bold; text-align:center; font-size:18px; }
+.preis-row{ display:flex; justify-content:center; gap:8px; margin-bottom:6px; flex-wrap:wrap; }
+.preis-btn{ flex:1 1 calc(45%); min-width:100px; padding:16px; font-size:18px; border-radius:12px; border:none; cursor:pointer; color:#fff; font-weight:bold; box-shadow:0 4px 12px rgba(0,0,0,0.4); transition: transform 0.1s, box-shadow 0.2s; }
+.preis-btn:active{ transform:scale(0.97); box-shadow:0 2px 6px rgba(0,0,0,0.4); }
 </style>
 </head>
 <body>
@@ -111,14 +127,9 @@ textarea {
 
 <script src="https://unpkg.com/html5-qrcode"></script>
 <script>
+/* ===== PIN & Inaktivität ===== */
 const APP_PIN="739284";
 let lastActivity=Date.now();
-let currentId="";
-let gaeste={};
-let scanner=null;
-const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbxN2KX9w5hll0G7qXT-EzV4I1oB7Ic-49pqimcgYXysZU4IlECYNi5WQUzS0DGXhfVf3g/exec";
-
-// ===== PIN & Inaktivität =====
 function promptPIN(){
   const pin=prompt("6-stellige PIN eingeben:");
   if(pin!==APP_PIN){document.body.innerHTML="<h2>Zugriff verweigert</h2>"; throw new Error("Falscher PIN");}
@@ -126,63 +137,99 @@ function promptPIN(){
 promptPIN();
 setInterval(()=>{if(Date.now()-lastActivity>5*60*1000) promptPIN();},60000);
 
-// ===== Status =====
+/* ===== STATE ===== */
+let currentId="";
+let gaeste={};
+let produkteListe=[];
+let scanner=null;
+
+// <-- Hier ist deine echte Web-App URL -->
+const API_BASE="https://script.google.com/macros/s/AKTUELLE_DEINE_URL/exec";
+
+/* ===== STATUS ===== */
 function updateStatus(){
-  document.getElementById("status").textContent = navigator.onLine ? "🟢 Online" : "🔴 Offline – Buchungen werden gemerkt";
+  document.getElementById("status").textContent=
+    navigator.onLine?"🟢 Online":"🔴 Offline – Buchungen werden gemerkt";
 }
 updateStatus();
-window.addEventListener("online", updateStatus);
-window.addEventListener("offline", updateStatus);
+window.addEventListener("online",updateStatus);
+window.addEventListener("offline",updateStatus);
 
-// ===== QR Scan =====
+/* ===== PRODUKTE LADEN ===== */
+async function ladeProdukte(){
+  try{
+    const res=await fetch(API_BASE+"?action=produkte");
+    produkteListe=await res.json();
+  }catch(err){
+    alert("Produkte konnten nicht geladen werden.");
+    produkteListe=[
+      {name:"Bier",preise:[1,1.5,2]},
+      {name:"Wasser",preise:[1,2,3]}
+    ];
+  }
+}
+ladeProdukte();
+
+/* ===== QR SCAN ===== */
 function startScan(){
   lastActivity=Date.now();
   if(scanner) return;
-  scanner = new Html5Qrcode("qr-reader");
+  scanner=new Html5Qrcode("qr-reader");
   scanner.start({facingMode:"environment"},{fps:10,qrbox:250},text=>{
     scanner.stop().then(()=>scanner.clear());
     scanner=null;
     currentId=text.trim();
-    if(!gaeste[currentId]) gaeste[currentId]={guthaben:0, warenkorb:[], notiz:""};
-    showGast();
+    ladeGuthaben(currentId);
   });
 }
 
-// ===== Gastanzeige =====
-async function showGast(){
+/* ===== GUTHABEN LADEN ===== */
+async function ladeGuthaben(id){
+  try{
+    const res=await fetch(API_BASE+"?action=gast&id="+encodeURIComponent(id));
+    const data=await res.json();
+    gaeste[id]={guthaben:data.guthaben, warenkorb:[], notiz:""};
+    showGast();
+  }catch(err){
+    alert("Gast nicht gefunden, lokal anlegen.");
+    if(!gaeste[id]) gaeste[id]={guthaben:20,warenkorb:[],notiz:""};
+    showGast();
+  }
+}
+
+/* ===== GAST ANZEIGE ===== */
+function showGast(){
   lastActivity=Date.now();
-  if(!gaeste[currentId]) gaeste[currentId]={guthaben:0, warenkorb:[], notiz:""};
-  const res = await fetch(`${WEBAPP_URL}?action=getGuthaben&sn=${currentId}`);
-  const data = await res.json();
-  gaeste[currentId].guthaben = data.guthaben || 0;
-  document.getElementById("guthaben").textContent = gaeste[currentId].guthaben.toFixed(2);
-  document.getElementById("name").textContent = currentId;
+  const gast=gaeste[currentId];
+  document.getElementById("name").textContent=currentId;
+  document.getElementById("guthaben").textContent=gast.guthaben.toFixed(2);
   document.getElementById("gast").style.display="block";
-  document.getElementById("notiz").value = gaeste[currentId].notiz;
+  document.getElementById("notiz").value=gast.notiz;
   renderProdukte();
   updateWarenkorb();
 }
 
-// ===== Produkte rendern =====
-async function renderProdukte(){
-  const div = document.getElementById("produkte");
+/* ===== PRODUKTE RENDERN ===== */
+function renderProdukte(){
+  const div=document.getElementById("produkte");
   div.innerHTML="";
-  const res = await fetch(`${WEBAPP_URL}?action=getProdukte`);
-  const produkte = await res.json();
-  produkte.forEach(p=>{
-    const title = document.createElement("div");
+  produkteListe.forEach(p=>{
+    const title=document.createElement("div");
     title.className="produkt-titel";
     title.textContent=p.name;
     div.appendChild(title);
 
     for(let i=0;i<p.preise.length;i+=2){
-      const row = document.createElement("div");
+      const row=document.createElement("div");
       row.className="preis-row";
       for(let j=0;j<2 && i+j<p.preise.length;j++){
-        const btn = document.createElement("button");
+        const btn=document.createElement("button");
         btn.className="preis-btn button-orange";
-        btn.textContent = p.preise[i+j].toFixed(2)+" €";
-        btn.onclick = ()=>addToCart(p.name, p.preise[i+j]);
+        btn.textContent=`${p.preise[i+j].toFixed(2)} €`;
+        btn.onclick=()=>{
+          gaeste[currentId].warenkorb.push({name:p.name, preis:p.preise[i+j], menge:1});
+          updateWarenkorb();
+        };
         row.appendChild(btn);
       }
       div.appendChild(row);
@@ -190,87 +237,83 @@ async function renderProdukte(){
   });
 }
 
-// ===== Warenkorb =====
-function addToCart(name, preis){
-  gaeste[currentId].warenkorb.push({name, preis, menge:1});
-  updateWarenkorb();
-}
-
+/* ===== WARENKORB ===== */
 function updateWarenkorb(){
   lastActivity=Date.now();
-  const ul = document.getElementById("warenkorb");
+  const ul=document.getElementById("warenkorb");
   ul.innerHTML="";
   let summe=0;
   gaeste[currentId].warenkorb.forEach((item,index)=>{
-    summe += item.preis*item.menge;
-    const li = document.createElement("li");
+    summe+=item.preis*item.menge;
+    const li=document.createElement("li");
     li.innerHTML=`${item.name} – ${item.preis.toFixed(2)} € x${item.menge} 
       <button class="button-green" onclick="plusEins(${index})">+1</button>
       <button class="button-red" onclick="loeschen(${index})">❌</button>`;
     ul.appendChild(li);
   });
-  document.getElementById("summe").textContent = summe.toFixed(2);
+  document.getElementById("summe").textContent=summe.toFixed(2);
 }
-
 function plusEins(index){ gaeste[currentId].warenkorb[index].menge+=1; updateWarenkorb(); }
 function loeschen(index){ gaeste[currentId].warenkorb.splice(index,1); updateWarenkorb(); }
 
-// ===== Aktionen =====
-function aufladen(){
-  lastActivity=Date.now();
-  const v = parseFloat(prompt("Aufladen (€):","10"));
+/* ===== AKTIONEN ===== */
+async function aufladen(){ 
+  lastActivity=Date.now(); 
+  const v=parseFloat(prompt("Aufladen (€):","10")); 
   if(v){
-    fetch(WEBAPP_URL,{
-      method:"POST",
-      body: JSON.stringify({action:"buchung", seriennummer: currentId, aktion:"Aufladen", betrag:v})
-    });
-    gaeste[currentId].guthaben += v;
-    document.getElementById("guthaben").textContent = gaeste[currentId].guthaben.toFixed(2);
+    gaeste[currentId].guthaben+=v; 
+    document.getElementById("guthaben").textContent=gaeste[currentId].guthaben.toFixed(2);
+    renderProdukte(); 
+    await updateGast(); // Update Sheet
   }
 }
-
-function auszahlen(){
-  lastActivity=Date.now();
+async function auszahlen(){ 
+  lastActivity=Date.now(); 
   if(confirm("Guthaben auszahlen und auf 0 setzen?")){
-    fetch(WEBAPP_URL,{
-      method:"POST",
-      body: JSON.stringify({action:"buchung", seriennummer: currentId, aktion:"Auszahlen", betrag:0})
-    });
-    gaeste[currentId].guthaben = 0;
-    document.getElementById("guthaben").textContent = "0.00";
+    gaeste[currentId].guthaben=0; 
+    document.getElementById("guthaben").textContent="0.00";
+    renderProdukte();
+    await updateGast(); // Update Sheet
   }
 }
 
-// ===== Buchung =====
+/* ===== BUCHUNG ===== */
 async function buchen(){
   lastActivity=Date.now();
-  const gast = gaeste[currentId];
-  const summe = gast.warenkorb.reduce((acc,i)=>acc+i.preis*i.menge,0);
-  if(summe > gast.guthaben){ alert("Nicht genug Guthaben!"); return; }
-
-  for(const item of gast.warenkorb){
-    await fetch(WEBAPP_URL,{
-      method:"POST",
-      body: JSON.stringify({
-        action:"buchung",
-        seriennummer: currentId,
-        aktion:"Buchen",
-        produkt:item.name,
-        betrag:item.preis*item.menge,
-        notiz:gast.notiz
-      })
-    });
-  }
-
-  gast.guthaben -= summe;
+  const gast=gaeste[currentId];
+  let summe=gast.warenkorb.reduce((acc,i)=>acc+i.preis*i.menge,0);
+  if(summe>gast.guthaben){alert("Nicht genug Guthaben!"); return;}
+  gast.guthaben-=summe;
+  await speicherBuchung(gast.warenkorb, gast.notiz);
   gast.warenkorb=[];
   gast.notiz="";
-  document.getElementById("guthaben").textContent = gast.guthaben.toFixed(2);
+  document.getElementById("guthaben").textContent=gast.guthaben.toFixed(2);
   resetScanner();
   alert("Gebucht!");
 }
 
-// ===== Reset & neu scannen =====
+/* ===== SPEICHERN IN SHEETS ===== */
+async function updateGast(){
+  try{
+    await fetch(API_BASE,{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({action:"updateGast",id:currentId,guthaben:gaeste[currentId].guthaben})
+    });
+  }catch(err){console.error(err);}
+}
+async function speicherBuchung(warenkorb,notiz){
+  try{
+    await fetch(API_BASE,{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({action:"buchen",id:currentId,warenkorb,notiz})
+    });
+    await updateGast();
+  }catch(err){console.error(err);}
+}
+
+/* ===== RESET & NEU SCANNEN ===== */
 function resetScanner(){
   document.getElementById("gast").style.display="none";
   currentId="";
@@ -278,19 +321,18 @@ function resetScanner(){
   document.getElementById("notiz").value="";
   document.getElementById("notiz-counter").textContent="500 Zeichen übrig";
   updateWarenkorb();
-  if(scanner){scanner.stop().then(()=>{scanner.clear(); scanner=null; startScan();});}
-  else startScan();
+  startScan();
 }
 
-// ===== Notiz =====
-const notiz = document.getElementById("notiz");
-const counter = document.getElementById("notiz-counter");
+/* ===== NOTIZ ===== */
+const notiz=document.getElementById("notiz");
+const counter=document.getElementById("notiz-counter");
 notiz.addEventListener("input",()=>{
   lastActivity=Date.now();
-  const len = notiz.value.length;
-  counter.textContent = (500-len)+" Zeichen übrig";
-  notiz.style.fontSize = len<=200?"16px":Math.max(8,16-(len-200)/20)+"px";
-  if(currentId) gaeste[currentId].notiz = notiz.value;
+  const len=notiz.value.length;
+  counter.textContent=(500-len)+" Zeichen übrig";
+  notiz.style.fontSize=len<=200?"16px":Math.max(8,16-(len-200)/20)+"px";
+  if(currentId) gaeste[currentId].notiz=notiz.value;
 });
 </script>
 </body>
