--- a/party_guthaben_party.html
+++ b/party_guthaben_party.html
@@ -5,7 +5,7 @@
 <title>Party Guthaben</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body { font-family: Arial,sans-serif; margin:10px; background: linear-gradient(135deg,#0b3d91,#0f4ea1); color:#fff; }
+body { font-family: Arial, sans-serif; margin:10px; background: linear-gradient(135deg,#0b3d91,#0f4ea1); color:#fff; }
 h2,h3{ text-shadow:1px 1px 2px #000; }
 button{ padding:14px 20px; margin:6px 0; font-size:18px; border:none; border-radius:8px; cursor:pointer; width:100%; font-weight:bold; color:#000; }
 .button-green{ background: linear-gradient(to right,#2ecc71,#27ae60); }
@@ -16,7 +16,7 @@ button{ padding:14px 20px; margin:6px 0; font-size:18px; border:none; border-rad
 #gast{ display:none; margin-top:20px; }
 textarea{ width:100%; height:70px; font-size:16px; resize:none; margin-top:10px; }
 #notiz-counter{ font-size:14px; margin-top:4px; }
-#produkte{ margin-top:10px; }
+#produkte{ margin-top:10px; max-height:300px; overflow-y:auto; }
 .warenkorb-item{ display:flex; justify-content:space-between; align-items:center; margin:4px 0; background:rgba(255,255,255,0.1); padding:6px 8px; border-radius:6px; }
 .warenkorb-item button{ width:36px; padding:4px; margin-left:4px; font-size:16px; }
 </style>
@@ -24,6 +24,28 @@ textarea{ width:100%; height:70px; font-size:16px; resize:none; margin-top:10px;
 <body>
 
 <h2>🔥 Party Guthaben 🔥</h2>
+
+<script>
+/* ===== PIN ===== */
+const APP_PIN = "739284";
+let lastActive = Date.now();
+
+function checkPin() {
+  const pin = prompt("6-stellige PIN eingeben:");
+  if(pin !== APP_PIN){
+    document.body.innerHTML="<h2>Zugriff verweigert</h2>";
+    throw new Error("Falscher PIN");
+  }
+}
+checkPin();
+
+setInterval(()=>{
+  if(Date.now() - lastActive > 5*60*1000){ checkPin(); lastActive=Date.now(); }
+}, 60000);
+
+document.body.addEventListener("click", ()=>{ lastActive=Date.now(); });
+document.body.addEventListener("keydown", ()=>{ lastActive=Date.now(); });
+</script>
 
 <button class="button-green" onclick="startScan()">📷 QR-Code scannen</button>
 <div id="qr-reader"></div>
